# Federated-Learning-for-IoT-Security-Agains-SQL-Injection-and-Brute-Force-Reproduction-experiment

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
.claude/agents/: federated-learning-architect.md
descriptors/: claimerDeploy.yaml  clientDeploy.yaml  clientDeploy_multinode.yaml  copier.yaml  serverDeploy.yaml  serverService.yaml  volumeClaim.yaml
src/: client.py  server.py  superlink_wrapper.py
